bonus/conf/wil/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil
spec:
  selector:
    app: wil
  ports:
    - protocol: TCP
      port: 80
      targetPort: wil-port
